plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.6'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'com.diffplug.spotless' version '6.22.0'
}

group = 'ch.bbcag'
version = '0.0.1-SNAPSHOT'
description = 'Wrodit-Backend'

java {
    sourceCompatibility = JavaVersion.VERSION_21
}

repositories {
    mavenCentral()
}
spotless {
    java {
        googleJavaFormat('1.17.0') // or choose your preferred formatter
    }
}
dependencies {
    // Spring dependencies
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-validation'

    // open api documentation
    implementation "org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.13"

    // Spring Security
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation "org.springframework.boot:spring-boot-starter-oauth2-resource-server"
    implementation 'com.nimbusds:nimbus-jose-jwt:9.40'

    // Spring Data JPA
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

    // MySQL driver
    runtimeOnly 'com.mysql:mysql-connector-j'

    // Tests
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testRuntimeOnly 'com.h2database:h2'
    // Source: https://mvnrepository.com/artifact/org.junit-pioneer/junit-pioneer
    testImplementation 'org.junit-pioneer:junit-pioneer:2.3.0'

    // Dev tools
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
}

tasks.named('test') {
    useJUnitPlatform()
    jvmArgs += [
            '--add-opens', 'java.base/java.util=ALL-UNNAMED',
            '--add-opens', 'java.base/java.lang=ALL-UNNAMED'
    ]
}